# dioxus_site

./: CNAME  Cargo.toml  Dioxus.toml  HYBRID_BLUEPRINT.md  HYDRATION_FIX.md  IMPLEMENTATION_STATUS.md  Makefile  SPA_ROUTING_FIX.md  SSG_FEATURE.md  TRUE_SSG_IMPLEMENTATION.md  WASM_FIX_SUMMARY.md
assets/: tailwind.css
docs/: index.html
docs/about/: index.html
docs/assets/: 404.html  about-dxhb30329eb012c68.css  contact-dxhe8ee60b9c6781db4.css  dioxus_site-dxh227413439cadd7.js  dioxus_site-dxh341d2d09fb5e6c6.js  dioxus_site-dxh398257bad87e9f7.js  dioxus_site-dxh432ca6d2b8ec498.js  dioxus_site-dxh46a96b87e3e1e8e.js  dioxus_site-dxh4a74908e41f2f117.js  dioxus_site-dxh4da24eb25a4f4012.js  dioxus_site-dxh5054abebfd02e99.js  dioxus_site-dxh665fce9c8e87b41e.js  dioxus_site-dxh6d67e9a1a1c52154.js  dioxus_site-dxh71439c95d26eaab0.js  dioxus_site-dxh75c2bc2b19483e33.js  dioxus_site-dxh95342935f8824090.js  dioxus_site-dxha8c1a1f49a426bf2.js  dioxus_site-dxha943c679ac2b8b42.js  dioxus_site-dxhacca54546d6b3cb.js  dioxus_site-dxhb39c142454747bf.js  dioxus_site-dxhb8107ffa969558d.js  dioxus_site-dxhbe74aa814c46a576.js  dioxus_site-dxhc20722cde89c2f9.js  dioxus_site-dxhc5eb691acc95279c.js  dioxus_site-dxhd5fca61cb154edb5.js  dioxus_site-dxheac3e908b0a86.js  dioxus_site_bg-dxh1a6345be73ea5f2.wasm  dioxus_site_bg-dxh1f4668a7b39f351.wasm  dioxus_site_bg-dxh31ef2b9781958797.wasm  dioxus_site_bg-dxh3a1f5fd6e4815667.wasm  dioxus_site_bg-dxh4ac745724c98e43d.wasm  dioxus_site_bg-dxh73ca4cafe445882.wasm  dioxus_site_bg-dxh861640fdb5abf39f.wasm  dioxus_site_bg-dxh8f36f839fa48c770.wasm  dioxus_site_bg-dxh91b5b33f985b0af.wasm  dioxus_site_bg-dxh9beefee1eaa16892.wasm  dioxus_site_bg-dxhb1e1f8a84a24b4c2.wasm  dioxus_site_bg-dxhc0dda21448e8925.wasm  dioxus_site_bg-dxhc233872bfc4a6e73.wasm  dioxus_site_bg-dxhd16fbad3805938d5.wasm  (+13 more)
docs/blog/1/: index.html
docs/contact/: index.html
scripts/: add-spa-routing.py
src/: contact_app.rs  generate_hybrid_contact.rs  generate_static.rs  lib.rs  main.rs
src/components/: echo.rs  hero.rs
src/views/: about.rs  contact.rs  mod.rs  navbar.rs
static_output/: index.html
(+40 files in other folders)
