[package]
name = "dioxus_site"
version = "0.1.0"
authors = ["Marcin Sydor <marcin.sydor@sky.uk>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["web"]
web = ["dioxus/web"]
