[package]
name = "dioxus_site"
version = "0.1.0"
authors = ["Marcin Sydor <marcin.sydor@sky.uk>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-ssr = "0.7.1"
dioxus-web = { version = "0.7.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Storage", "Document", "Element", "HtmlElement", "HtmlInputElement", "HtmlTextAreaElement", "DomTokenList", "Event", "EventTarget"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"], optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"

[features]
default = ["web"]
web = ["dioxus/web", "dioxus-web"]
ssr = ["dioxus/ssr", "tokio"]

[[bin]]
name = "dioxus_site"
path = "src/main.rs"

[[bin]]
name = "generate_static"
path = "src/generate_static.rs"

[[bin]]
name = "generate_hybrid_contact"
path = "src/generate_hybrid_contact.rs"
